--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_g.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_g.cshtml
@@ -1,5 +1,4 @@
-﻿<h5><strong>Sobre las causales de caducidad imputadas</strong></h5>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -95,27 +94,31 @@
                                         Volumen movilizado advertido en campo
                                     </th>
                                     <th style="text-align: center; border: 1px solid #000;">
-                                        Volumen injustificado
+                                        Volumen no declarado
                                     </th>
                                 </tr>
-                            </thead>
+                            </thead>                            
                             <tbody>
                                 <tr>
-                                    <td style="border: 1px solid #000; text-align: center;">1</td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
+                                    <td style="border: 1px solid #000; text-align: center;">XX</td>
+                                    <td style="border: 1px solid #000; text-align: center;">XX</td>
+                                    <td style="border: 1px solid #000; text-align: center;">XX</td>
+                                    <td style="border: 1px solid #000; text-align: center;">XX</td>
+                                    <td style="border: 1px solid #000; text-align: center;">XX</td>
+                                    <td style="border: 1px solid #000; text-align: center;">XX</td>
+                                    <td style="border: 1px solid #000; text-align: center;">XX</td>
                                 </tr>
+                            </tbody>                            
+                            <tfoot>
                                 <tr style="background-color: #bfbfbf;">
                                     <td style="border: 1px solid #000; text-align: center;" colspan="6">
                                         Total
                                     </td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
+                                    <td style="border: 1px solid #000; text-align: center;">
+                                        XX
+                                    </td>
                                 </tr>
-                            </tbody>
+                            </tfoot>
                         </table>
                     </span>
                 </li>
