--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_e.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_e.cshtml
@@ -94,23 +94,29 @@
                                     </th>
                                 </tr>
                             </thead>
+                            {{each(i, objEsp) informe.VOLUMENES_INJUSTIFICADOS}}
                             <tbody>
                                 <tr>
-                                    <td style="border: 1px solid #000; text-align: center;">1</td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.ESPECIES}</td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.VOLUMEN_APROBADO}</td>
+                                    <td style="border: 1px solid #000; text-align: center;">X</td>
+                                    <td style="border: 1px solid #000; text-align: center;">XXX</td>
+                                    <td style="border: 1px solid #000; text-align: center;">X</td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.VOLUMEN_MOVILIZADO}</td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.VOLUMEN_INJUSTIFICADO}</td>
                                 </tr>
+                            </tbody>
+                            {{/each}}
+                            <tfoot>
                                 <tr style="background-color: #bfbfbf;">
                                     <td style="border: 1px solid #000; text-align: center;" colspan="6">
                                         Total
                                     </td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
+                                    <td style="border: 1px solid #000; text-align: center;">
+                                        ${informe.VOLUMENES_INJUSTIFICADOS_TOTAL}
+                                    </td>
                                 </tr>
-                            </tbody>
+                            </tfoot>
                         </table>
                         <br /><br />
                         (En caso se requiera una precisión adicional sobre alguna de las especies se indica en este párrafo).
