--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_21.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_21.cshtml
@@ -91,23 +91,29 @@
                                     </th>
                                 </tr>
                             </thead>
+                            {{each(i, objEsp) informe.VOLUMENES_INJUSTIFICADOS}}
                             <tbody>
                                 <tr>
-                                    <td style="border: 1px solid #000; text-align: center;">1</td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.ESPECIES}</td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.VOLUMEN_APROBADO}</td>
+                                    <td style="border: 1px solid #000; text-align: center;">X</td>
+                                    <td style="border: 1px solid #000; text-align: center;">XXX</td>
+                                    <td style="border: 1px solid #000; text-align: center;">X</td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.VOLUMEN_MOVILIZADO}</td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.VOLUMEN_INJUSTIFICADO}</td>
                                 </tr>
+                            </tbody>
+                            {{/each}}
+                            <tfoot>
                                 <tr style="background-color: #bfbfbf;">
                                     <td style="border: 1px solid #000; text-align: center;" colspan="6">
                                         Total
                                     </td>
-                                    <td style="border: 1px solid #000; text-align: center;"></td>
+                                    <td style="border: 1px solid #000; text-align: center;">
+                                        ${informe.VOLUMENES_INJUSTIFICADOS_TOTAL}
+                                    </td>
                                 </tr>
-                            </tbody>
+                            </tfoot>
                         </table>
                         <div style="font-size: 9pt; margin-top: 0; text-align: center;">
                             <strong>Fuente:</strong> Elaboración propia en base al Informe de Supervisión N° ${informe.ANTECEDENTES_DOCS.Inf_Sup.numero || 'XXXXX-XXXX-OSINFOR/08.1.1'}
