--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeConservacion/_ManejoImpacto.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeConservacion/_ManejoImpacto.cshtml
@@ -14,19 +14,19 @@
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="txtTipoImpacto" class="text-small">Tipo de Impacto</label>
-                        @Html.TextBox("txtTipoImpacto", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtTipoImpacto", "", new { @class = "form-control form-control-sm", maxlength = "200", oninput = "this.value = this.value.replace(/[^áéíóúa-zÁÉÍÓÚA-Z 0-9]/,'')" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="txtRiesgo" class="text-small">Riesgo Potencial</label>
-                        @Html.TextBox("txtRiesgo", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtRiesgo", "", new { @class = "form-control form-control-sm", maxlength = "200", oninput = "this.value = this.value.replace(/[^áéíóúa-zÁÉÍÓÚA-Z 0-9]/,'')" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="txtActividad" class="text-small">Actividades Preventivas/Correctivas</label>
-                        @Html.TextBox("txtActividad", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtActividad", "", new { @class = "form-control form-control-sm", maxlength = "500", oninput = "this.value = this.value.replace(/[^áéíóúa-zÁÉÍÓÚA-Z 0-9]/,'')" })
                     </div>
                 </div>
                 <div class="form-row">
