--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeFauna/_ResponsabilidadSocial.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeFauna/_ResponsabilidadSocial.cshtml
@@ -15,25 +15,25 @@
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="txtActividad" class="text-small">Actividad</label>
-                        @Html.TextBox("txtActividad", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtActividad", "", new { @class = "form-control form-control-sm", maxlength = "500", oninput = "this.value = this.value.replace(/[^áéíóúa-zÁÉÍÓÚA-Z 0-9]/,'')" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="txtNumParticipante" class="text-small">Nro. de Participantes</label>
-                        @Html.TextBox("txtNumParticipante", "", new { @class = "form-control form-control-sm", type = "number" })
+                        @Html.TextBox("txtNumParticipante", "", new { @class = "form-control form-control-sm", maxlength = "10", type = "number" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="txtLugar" class="text-small">Lugar de Realización</label>
-                        @Html.TextBox("txtLugar", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtLugar", "", new { @class = "form-control form-control-sm", maxlength = "500", oninput = "this.value = this.value.replace(/[^áéíóúa-zÁÉÍÓÚA-Z 0-9]/,'')" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="txtObjetivo" class="text-small">Objetivo</label>
-                        @Html.TextBox("txtObjetivo", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtObjetivo", "", new { @class = "form-control form-control-sm", maxlength = "500", oninput = "this.value = this.value.replace(/[^áéíóúa-zÁÉÍÓÚA-Z 0-9]/,'')" })
                     </div>
                 </div>
                 <div class="form-row">
