--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_21.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_21.cshtml
@@ -96,9 +96,9 @@
                                 <tr>
                                     <td style="border: 1px solid #000; text-align: center;">${objEsp.ESPECIES}</td>
                                     <td style="border: 1px solid #000; text-align: center;">${objEsp.VOLUMEN_APROBADO}</td>
-                                    <td style="border: 1px solid #000; text-align: center;">X</td>
-                                    <td style="border: 1px solid #000; text-align: center;">XXX</td>
-                                    <td style="border: 1px solid #000; text-align: center;">X</td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.NUM_ARBOLES}</td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.ESTADO_CAMPO}</td>
+                                    <td style="border: 1px solid #000; text-align: center;">${objEsp.BALANCE_EXTRACCION}</td>
                                     <td style="border: 1px solid #000; text-align: center;">${objEsp.VOLUMEN_MOVILIZADO}</td>
                                     <td style="border: 1px solid #000; text-align: center;">${objEsp.VOLUMEN_INJUSTIFICADO}</td>
                                 </tr>
