--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
@@ -254,10 +254,13 @@
 @Html.Partial("~/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplFootnotes.cshtml")
 
 <script id="tmpl-pie-pagina" type="text/x-jquery-tmpl">
-    Esta es una copia auténtica imprimible de un documento electrónico archivado en el Organismo de Supervisión de los Recursos Forestales y
-    de Fauna Silvestre, aplicando lo dispuesto por el Art. 25 de D.S. 070 – 2013 PCM y la Tercera Disposición Complementaria Final del D.S. 026-
-    2016-PCM. Su autenticidad e integridad pueden ser contrastadas a través de la siguiente web:
-    <a href="http://mpv.osinfor.gob.pe:8083/visor-osinfor-pide">http://mpv.osinfor.gob.pe:8083/visor-osinfor-pide</a> e ingresando la siguiente clave-std: ${SITD_PASSWORD}
+    <img width="600" alt="" src="${urlLocalSigo}content/images/logo/osinfor-footer-punche.png" />
+    <div>
+        Esta es una copia auténtica imprimible de un documento electrónico archivado en el Organismo de Supervisión de los Recursos Forestales y
+        de Fauna Silvestre, aplicando lo dispuesto por el Art. 25 de D.S. 070 – 2013 PCM y la Tercera Disposición Complementaria Final del D.S. 026-
+        2016-PCM. Su autenticidad e integridad pueden ser contrastadas a través de la siguiente web:
+        <a href="http://mpv.osinfor.gob.pe:8083/visor-osinfor-pide">http://mpv.osinfor.gob.pe:8083/visor-osinfor-pide</a> e ingresando la siguiente clave-std: ${informe.SITD_PASSWORD}
+    </div>    
 </script>
 
 <script id="tmpl-pie-pagina-estructura" type="text/x-jquery-tmpl">
