--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
@@ -52,11 +52,11 @@
             por Resolución de Jefatura N° 00043-2021-OSINFOR/01.1.
         </p>
         <div style="text-align: justify;">
-            <ol style="list-style-type: upper-roman; margin-left: -14.2pt;">
+            <ol style="list-style-type: upper-roman; margin-left: -15px;">
                 <li>
                     <strong>ANTECEDENTES</strong><br />
                     <span>
-                        <ol class="continue" style="margin-left: -35pt;">                            
+                        <ol class="continue" style="margin-left: -37pt;">
                             <li>
                                 Por <strong>Informe de Supervisión N° ${ANTECEDENTES_DOCS.Inf_Sup.numero}</strong>, de fecha ${ANTECEDENTES_DOCS.Inf_Sup.fechaEmisionTexto || 'XX de XXXXX de XXXX'}, la DSFFS dio cuenta de los resultados de la supervisión ordinaria/extraordinaria al (indicar plan de manejo forestal), correspondiente al periodo XXXX-XXXX, del ${TIPO_CONTRATO}, además del cumplimiento de las obligaciones contractuales del citado contrato, diligencia de campo realizada del (indicar por defecto la fecha).
                             </li>
@@ -260,7 +260,7 @@
         de Fauna Silvestre, aplicando lo dispuesto por el Art. 25 de D.S. 070 – 2013 PCM y la Tercera Disposición Complementaria Final del D.S. 026-
         2016-PCM. Su autenticidad e integridad pueden ser contrastadas a través de la siguiente web:
         <a href="http://mpv.osinfor.gob.pe:8083/visor-osinfor-pide">http://mpv.osinfor.gob.pe:8083/visor-osinfor-pide</a> e ingresando la siguiente clave-std: ${informe.SITD_PASSWORD}
-    </div>    
+    </div>
 </script>
 
 <script id="tmpl-pie-pagina-estructura" type="text/x-jquery-tmpl">
